[gd_scene load_steps=3 format=3 uid="uid://c4ln681khhs8f"]

[ext_resource type="Texture2D" uid="uid://cu30hrwf6usan" path="res://player/health.png" id="1_gq327"]
[ext_resource type="Script" path="res://player/Health_bar/health_bar.gd" id="1_ud4y4"]

[node name="HealthBar" type="Node2D"]
z_index = 10
script = ExtResource("1_ud4y4")
power_cell = ExtResource("1_gq327")

[node name="Powercell1" type="Sprite2D" parent="."]
position = Vector2(25, 48)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_gq327")

[node name="Powercell2" type="Sprite2D" parent="."]
position = Vector2(94, 48)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_gq327")

[node name="Powercell3" type="Sprite2D" parent="."]
position = Vector2(160, 48)
scale = Vector2(0.3, 0.3)
texture = ExtResource("1_gq327")
